# trade_flask

./: .gitignore  docker-compose.yml  pyproject.toml
apps/: .env.dev
apps/base/: app.py  tasks.py
apps/base/commands/create_admin/: command.py
apps/base/login/: api.py  login.py
apps/base/login/templates/: home.html  login.html
apps/base/migrations/: alembic.ini  env.py
apps/base/migrations/versions/: 2024_12_27_2202-8c7bea730677_tables_user_and_transaction.py  2024_12_29_0429-aca46adfd2e1_tables_webhooks.py
apps/base/settings/: dto_base.py  settings.py  user_loader.py
apps/base/statistics/: repository.py  urls.py
apps/base/statistics/templates/: statistics.html
apps/base/templates/: base.html  index.html
apps/base/transaction/: api.py  form_repository.py  forms.py  models.py  repository.py  urls.py
apps/base/transaction/schemas/: transaction_schemas.py
apps/base/transaction/templates/: _transaction.html  _user_transaction.html  edit_transaction.html  one_transaction.html  transactions.html
apps/base/user/: forms.py  models.py  repository.py  urls.py  utils.py
apps/base/user/schemas/: user_schemas.py
apps/base/user/templates/: _profile.html  create_profiles.html  edit_profiles.html  edit_profiles_one.html  profile_for_admin.html  profile_one.html  profiles.html
apps/base/webhook/: models.py  repository.py  schemas.py  urls.py
apps/base/webhook/templates/: _webhook.html  webhooks.html
apps/docker/web/: Dockerfile
apps/web/: Dockerfile
